set(
        CLP_SOURCES
        ../../src/clp/ArrayBackedPosIntSet.hpp
        ../../src/clp/BufferedReader.cpp
        ../../src/clp/BufferedReader.hpp
        ../../src/clp/BufferReader.cpp
        ../../src/clp/BufferReader.hpp
        ../../src/clp/database_utils.cpp
        ../../src/clp/database_utils.hpp
        ../../src/clp/Defs.h
        ../../src/clp/dictionary_utils.cpp
        ../../src/clp/dictionary_utils.hpp
        ../../src/clp/DictionaryEntry.hpp
        ../../src/clp/DictionaryReader.hpp
        ../../src/clp/DictionaryWriter.hpp
        ../../src/clp/EncodedVariableInterpreter.cpp
        ../../src/clp/EncodedVariableInterpreter.hpp
        ../../src/clp/ErrorCode.hpp
        ../../src/clp/ffi/encoding_methods.cpp
        ../../src/clp/ffi/encoding_methods.hpp
        ../../src/clp/ffi/encoding_methods.inc
        ../../src/clp/ffi/EncodedTextAst.hpp
        ../../src/clp/ffi/EncodedTextAstError.cpp
        ../../src/clp/ffi/EncodedTextAstError.hpp
        ../../src/clp/ffi/ir_stream/byteswap.hpp
        ../../src/clp/ffi/ir_stream/decoding_methods.cpp
        ../../src/clp/ffi/ir_stream/decoding_methods.hpp
        ../../src/clp/ffi/ir_stream/decoding_methods.inc
        ../../src/clp/ffi/ir_stream/encoding_methods.cpp
        ../../src/clp/ffi/ir_stream/encoding_methods.hpp
        ../../src/clp/ffi/ir_stream/IrErrorCode.cpp
        ../../src/clp/ffi/ir_stream/IrErrorCode.hpp
        ../../src/clp/ffi/ir_stream/IrSerializationError.cpp
        ../../src/clp/ffi/ir_stream/IrSerializationError.hpp
        ../../src/clp/ffi/ir_stream/utils.cpp
        ../../src/clp/ffi/ir_stream/utils.hpp
        ../../src/clp/ffi/StringBlob.hpp
        ../../src/clp/FileDescriptor.cpp
        ../../src/clp/FileDescriptor.hpp
        ../../src/clp/FileReader.cpp
        ../../src/clp/FileReader.hpp
        ../../src/clp/FileWriter.cpp
        ../../src/clp/FileWriter.hpp
        ../../src/clp/global_metadata_db_utils.cpp
        ../../src/clp/global_metadata_db_utils.hpp
        ../../src/clp/GlobalMetadataDB.hpp
        ../../src/clp/GlobalMetadataDBConfig.cpp
        ../../src/clp/GlobalMetadataDBConfig.hpp
        ../../src/clp/GlobalMySQLMetadataDB.cpp
        ../../src/clp/GlobalMySQLMetadataDB.hpp
        ../../src/clp/GlobalSQLiteMetadataDB.cpp
        ../../src/clp/GlobalSQLiteMetadataDB.hpp
        ../../src/clp/ir/constants.hpp
        ../../src/clp/ir/EncodedTextAst.cpp
        ../../src/clp/ir/EncodedTextAst.hpp
        ../../src/clp/ir/LogEvent.hpp
        ../../src/clp/ir/LogEventDeserializer.cpp
        ../../src/clp/ir/LogEventDeserializer.hpp
        ../../src/clp/ir/LogEventSerializer.cpp
        ../../src/clp/ir/LogEventSerializer.hpp
        ../../src/clp/ir/parsing.cpp
        ../../src/clp/ir/parsing.hpp
        ../../src/clp/ir/parsing.inc
        ../../src/clp/ir/types.hpp
        ../../src/clp/ir/utils.cpp
        ../../src/clp/ir/utils.hpp
        ../../src/clp/LibarchiveFileReader.cpp
        ../../src/clp/LibarchiveFileReader.hpp
        ../../src/clp/LibarchiveReader.cpp
        ../../src/clp/LibarchiveReader.hpp
        ../../src/clp/LogSurgeonReader.cpp
        ../../src/clp/LogSurgeonReader.hpp
        ../../src/clp/LogTypeDictionaryEntry.cpp
        ../../src/clp/LogTypeDictionaryEntry.hpp
        ../../src/clp/LogTypeDictionaryEntryReq.hpp
        ../../src/clp/LogTypeDictionaryReader.hpp
        ../../src/clp/LogTypeDictionaryWriter.cpp
        ../../src/clp/LogTypeDictionaryWriter.hpp
        ../../src/clp/math_utils.hpp
        ../../src/clp/MessageParser.cpp
        ../../src/clp/MessageParser.hpp
        ../../src/clp/MySQLDB.cpp
        ../../src/clp/MySQLDB.hpp
        ../../src/clp/MySQLParamBindings.cpp
        ../../src/clp/MySQLParamBindings.hpp
        ../../src/clp/MySQLPreparedStatement.cpp
        ../../src/clp/MySQLPreparedStatement.hpp
        ../../src/clp/PageAllocatedVector.hpp
        ../../src/clp/ParsedMessage.cpp
        ../../src/clp/ParsedMessage.hpp
        ../../src/clp/Platform.hpp
        ../../src/clp/Profiler.cpp
        ../../src/clp/Profiler.hpp
        ../../src/clp/ProfilerReporter.hpp
        ../../src/clp/Query.cpp
        ../../src/clp/Query.hpp
        ../../src/clp/ReaderInterface.cpp
        ../../src/clp/ReaderInterface.hpp
        ../../src/clp/ReadOnlyMemoryMappedFile.cpp
        ../../src/clp/ReadOnlyMemoryMappedFile.hpp
        ../../src/clp/ScopedProfiler.hpp
        ../../src/clp/spdlog_with_specializations.hpp
        ../../src/clp/SQLiteDB.cpp
        ../../src/clp/SQLiteDB.hpp
        ../../src/clp/SQLitePreparedStatement.cpp
        ../../src/clp/SQLitePreparedStatement.hpp
        ../../src/clp/Stopwatch.cpp
        ../../src/clp/Stopwatch.hpp
        ../../src/clp/streaming_archive/ArchiveMetadata.cpp
        ../../src/clp/streaming_archive/ArchiveMetadata.hpp
        ../../src/clp/streaming_archive/Constants.hpp
        ../../src/clp/streaming_archive/MetadataDB.cpp
        ../../src/clp/streaming_archive/MetadataDB.hpp
        ../../src/clp/streaming_archive/reader/Archive.cpp
        ../../src/clp/streaming_archive/reader/Archive.hpp
        ../../src/clp/streaming_archive/reader/File.cpp
        ../../src/clp/streaming_archive/reader/File.hpp
        ../../src/clp/streaming_archive/reader/Message.cpp
        ../../src/clp/streaming_archive/reader/Message.hpp
        ../../src/clp/streaming_archive/reader/Segment.cpp
        ../../src/clp/streaming_archive/reader/Segment.hpp
        ../../src/clp/streaming_archive/reader/SegmentManager.cpp
        ../../src/clp/streaming_archive/reader/SegmentManager.hpp
        ../../src/clp/streaming_archive/writer/Archive.cpp
        ../../src/clp/streaming_archive/writer/Archive.hpp
        ../../src/clp/streaming_archive/writer/File.cpp
        ../../src/clp/streaming_archive/writer/File.hpp
        ../../src/clp/streaming_archive/writer/Segment.cpp
        ../../src/clp/streaming_archive/writer/Segment.hpp
        ../../src/clp/streaming_archive/writer/utils.cpp
        ../../src/clp/streaming_archive/writer/utils.hpp
        ../../src/clp/streaming_compression/Compressor.hpp
        ../../src/clp/streaming_compression/Constants.hpp
        ../../src/clp/streaming_compression/Decompressor.hpp
        ../../src/clp/streaming_compression/passthrough/Compressor.cpp
        ../../src/clp/streaming_compression/passthrough/Compressor.hpp
        ../../src/clp/streaming_compression/passthrough/Decompressor.cpp
        ../../src/clp/streaming_compression/passthrough/Decompressor.hpp
        ../../src/clp/streaming_compression/zstd/Compressor.cpp
        ../../src/clp/streaming_compression/zstd/Compressor.hpp
        ../../src/clp/streaming_compression/zstd/Constants.hpp
        ../../src/clp/streaming_compression/zstd/Decompressor.cpp
        ../../src/clp/streaming_compression/zstd/Decompressor.hpp
        ../../src/clp/StringReader.cpp
        ../../src/clp/StringReader.hpp
        ../../src/clp/time_types.hpp
        ../../src/clp/TimestampPattern.cpp
        ../../src/clp/TimestampPattern.hpp
        ../../src/clp/TraceableException.hpp
        ../../src/clp/type_utils.hpp
        ../../src/clp/utf8_utils.cpp
        ../../src/clp/utf8_utils.hpp
        ../../src/clp/Utils.cpp
        ../../src/clp/Utils.hpp
        ../../src/clp/VariableDictionaryEntry.cpp
        ../../src/clp/VariableDictionaryEntry.hpp
        ../../src/clp/VariableDictionaryEntryReq.hpp
        ../../src/clp/VariableDictionaryReader.hpp
        ../../src/clp/VariableDictionaryReaderReq.hpp
        ../../src/clp/VariableDictionaryWriter.cpp
        ../../src/clp/VariableDictionaryWriter.hpp
        ../../src/clp/VariableDictionaryWriterReq.hpp
        ../../src/clp/version.hpp
        ../../src/clp/WriterInterface.cpp
        ../../src/clp/WriterInterface.hpp
        "${CLP_SQLITE3_SOURCE_DIRECTORY}/sqlite3.c"
        ../../src/clp/clp/CommandLineArguments.cpp
        ../../src/clp/clp/CommandLineArguments.hpp
        ../../src/clp/clp/compression.cpp
        ../../src/clp/clp/compression.hpp
        ../../src/clp/clp/decompression.cpp
        ../../src/clp/clp/decompression.hpp
        ../../src/clp/clp/FileCompressor.cpp
        ../../src/clp/clp/FileCompressor.hpp
        ../../src/clp/clp/FileDecompressor.cpp
        ../../src/clp/clp/FileDecompressor.hpp
        ../../src/clp/clp/run.cpp
        ../../src/clp/clp/run.hpp
        ../../src/clp/clp/utils.cpp
        ../../src/clp/clp/utils.hpp
)

set(
        REGRESSION_TEST_SOURCES
        LogGenerator.cpp
        LogGenerator.hpp
        LogType.hpp
        regression_test.cpp
)

add_executable(regression_test ${CLP_SOURCES} ${REGRESSION_TEST_SOURCES})
target_compile_features(regression_test PRIVATE cxx_std_20)
target_include_directories(regression_test
        PRIVATE
        ../../src
        "${CLP_SQLITE3_INCLUDE_DIRECTORY}"
)
target_link_libraries(regression_test
        PRIVATE
        absl::flat_hash_map
        Boost::filesystem Boost::program_options
        date::date
        fmt::fmt
        log_surgeon::log_surgeon
        spdlog::spdlog
        ${sqlite_LIBRARY_DEPENDENCIES}
        LibArchive::LibArchive
        MariaDBClient::MariaDBClient
        msgpack-cxx
        nlohmann_json::nlohmann_json
        ${STD_FS_LIBS}
        clp::string_utils
        ystdlib::containers
        ystdlib::error_handling
        zstd::libzstd_static
)
target_compile_Definitions(regression_test
        PRIVATE
        PROF_TEST_ENABLED=1
)
