set(
        CLO_SOURCES
        ../database_utils.cpp
        ../database_utils.hpp
        ../dictionary_utils.cpp
        ../dictionary_utils.hpp
        ../DictionaryEntry.hpp
        ../DictionaryReader.hpp
        ../EncodedVariableInterpreter.cpp
        ../EncodedVariableInterpreter.hpp
        ../Grep.cpp
        ../Grep.hpp
        ../LogSurgeonReader.cpp
        ../LogSurgeonReader.hpp
        ../LogTypeDictionaryEntry.cpp
        ../LogTypeDictionaryEntry.hpp
        ../LogTypeDictionaryReader.hpp
        ../networking/socket_utils.cpp
        ../networking/socket_utils.hpp
        ../networking/SocketOperationFailed.hpp
        ../Query.cpp
        ../Query.hpp
        ../SQLiteDB.cpp
        ../SQLiteDB.hpp
        ../SQLitePreparedStatement.cpp
        ../SQLitePreparedStatement.hpp
        ../streaming_archive/ArchiveMetadata.cpp
        ../streaming_archive/ArchiveMetadata.hpp
        ../streaming_archive/Constants.hpp
        ../streaming_archive/MetadataDB.cpp
        ../streaming_archive/MetadataDB.hpp
        ../streaming_archive/reader/Archive.cpp
        ../streaming_archive/reader/Archive.hpp
        ../streaming_archive/reader/File.cpp
        ../streaming_archive/reader/File.hpp
        ../streaming_archive/reader/Message.cpp
        ../streaming_archive/reader/Message.hpp
        ../streaming_archive/reader/Segment.cpp
        ../streaming_archive/reader/Segment.hpp
        ../streaming_archive/reader/SegmentManager.cpp
        ../streaming_archive/reader/SegmentManager.hpp
        ../streaming_archive/writer/File.cpp
        ../streaming_archive/writer/File.hpp
        ../streaming_archive/writer/Segment.cpp
        ../streaming_archive/writer/Segment.hpp
        ../streaming_compression/Constants.hpp
        ../streaming_compression/Decompressor.hpp
        ../streaming_compression/passthrough/Compressor.cpp
        ../streaming_compression/passthrough/Compressor.hpp
        ../streaming_compression/passthrough/Decompressor.cpp
        ../streaming_compression/passthrough/Decompressor.hpp
        ../streaming_compression/zstd/Compressor.cpp
        ../streaming_compression/zstd/Compressor.hpp
        ../streaming_compression/zstd/Constants.hpp
        ../streaming_compression/zstd/Decompressor.cpp
        ../streaming_compression/zstd/Decompressor.hpp
        ../Thread.cpp
        ../Thread.hpp
        ../Utils.cpp
        ../Utils.hpp
        ../VariableDictionaryEntry.cpp
        ../VariableDictionaryEntry.hpp
        ../VariableDictionaryReader.hpp
        ../VariableDictionaryWriter.cpp
        ../VariableDictionaryWriter.hpp
        "${PROJECT_SOURCE_DIR}/src/BufferReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/BufferReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/Defs.h"
        "${PROJECT_SOURCE_DIR}/src/ErrorCode.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/encoding_methods.cpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/encoding_methods.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/encoding_methods.inc"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/decoding_methods.cpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/decoding_methods.hpp"
        "${PROJECT_SOURCE_DIR}/src/ffi/ir_stream/decoding_methods.inc"
        "${PROJECT_SOURCE_DIR}/src/FileReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/FileReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/FileWriter.cpp"
        "${PROJECT_SOURCE_DIR}/src/FileWriter.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/LogEvent.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/parsing.cpp"
        "${PROJECT_SOURCE_DIR}/src/ir/parsing.hpp"
        "${PROJECT_SOURCE_DIR}/src/ir/parsing.inc"
        "${PROJECT_SOURCE_DIR}/src/ir/types.hpp"
        "${PROJECT_SOURCE_DIR}/src/PageAllocatedVector.hpp"
        "${PROJECT_SOURCE_DIR}/src/ParsedMessage.cpp"
        "${PROJECT_SOURCE_DIR}/src/ParsedMessage.hpp"
        "${PROJECT_SOURCE_DIR}/src/Platform.hpp"
        "${PROJECT_SOURCE_DIR}/src/Profiler.cpp"
        "${PROJECT_SOURCE_DIR}/src/Profiler.hpp"
        "${PROJECT_SOURCE_DIR}/src/ReaderInterface.cpp"
        "${PROJECT_SOURCE_DIR}/src/ReaderInterface.hpp"
        "${PROJECT_SOURCE_DIR}/src/spdlog_with_specializations.hpp"
        "${PROJECT_SOURCE_DIR}/src/Stopwatch.cpp"
        "${PROJECT_SOURCE_DIR}/src/Stopwatch.hpp"
        "${PROJECT_SOURCE_DIR}/src/StringReader.cpp"
        "${PROJECT_SOURCE_DIR}/src/StringReader.hpp"
        "${PROJECT_SOURCE_DIR}/src/TimestampPattern.cpp"
        "${PROJECT_SOURCE_DIR}/src/TimestampPattern.hpp"
        "${PROJECT_SOURCE_DIR}/src/TraceableException.hpp"
        "${PROJECT_SOURCE_DIR}/src/type_utils.hpp"
        "${PROJECT_SOURCE_DIR}/src/version.hpp"
        "${PROJECT_SOURCE_DIR}/src/WriterInterface.cpp"
        "${PROJECT_SOURCE_DIR}/src/WriterInterface.hpp"
        "${PROJECT_SOURCE_DIR}/submodules/sqlite3/sqlite3.c"
        "${PROJECT_SOURCE_DIR}/submodules/sqlite3/sqlite3.h"
        "${PROJECT_SOURCE_DIR}/submodules/sqlite3/sqlite3ext.h"
        clo.cpp
        CommandLineArguments.cpp
        CommandLineArguments.hpp
        ControllerMonitoringThread.cpp
        ControllerMonitoringThread.hpp
)

add_executable(clo ${CLO_SOURCES})
target_compile_features(clo PRIVATE cxx_std_17)
target_include_directories(clo PRIVATE "${PROJECT_SOURCE_DIR}/submodules")
target_link_libraries(clo
        PRIVATE
        Boost::filesystem Boost::iostreams Boost::program_options
        fmt::fmt
        log_surgeon::log_surgeon
        msgpack-cxx
        spdlog::spdlog
        ${sqlite_LIBRARY_DEPENDENCIES}
        ${STD_FS_LIBS}
        string_utils::string_utils
        ZStd::ZStd
)
# Put the built executable at the root of the build directory
set_target_properties(
        clo
        PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}"
)
